--- a/content/home.html
+++ b/content/home.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
+                     <li><a href='First.html'>First</a><li class='has-children'><a href='home.html'>home</a><ul class='dropdown'><li><a href='分組任務.html'>分組任務</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,43 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">USB << <a href='USB.html'>Previous</a> <br /><h1>USB2</h1>
-<script>
-function getDart(dirname){
-    source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/Dart_ex/" + dirname + "&theme=dark";
-    document.getElementById("iframe").src = source ;
-}
-
-function getHtmlDart(dirname){
-    source = "https://dartpad.github.io/embed-html.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/Dart_ex/"  + dirname + "&theme=dark";
-document.getElementById("iframe").src = source ;
-}
-
-function getFlutter(dirname){
-    source = "https://dartpad.github.io/embed-flutter.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/Dart_ex/"  + dirname + "&theme=dark";
-document.getElementById("iframe").src = source ;
-}
-
-function largest(){
-document.getElementById("iframe").width = document.body.clientWidth ;
-document.getElementById("iframe").height = document.body.clientWidth*0.5 ;
-}
-
-function original(){
-document.getElementById("iframe").width = 800 ;
-document.getElementById("iframe").height = 600 ;
-}
-</script>
-<!-- 取 Dart 程式的按鈕 -->
-<h4>純 Dart 程式</h4>
-<p><button onclick="getDart('hello')">Hello</button> <button onclick="getDart('for')">For Loop</button> <button onclick="getDart('sum')">Sum</button> <button onclick="getDart('runge_kutta')">Runge-Kutta</button> <button onclick="getDart('rk_ex1')">RK ex1</button> <button onclick="getDart('mass_spring_damping')">Mass Spring Damping </button> <button onclick="getDart('temperature')">temperature</button></p>
-<h4>Html 程式</h4>
-<p><button onclick="getHtmlDart('roc_flag')">ROC Flag</button> <button onclick="getHtmlDart('grid')">Grid</button> <button onclick="getHtmlDart('xyplot')">X-Y Plot</button> <button onclick="getHtmlDart('slithery')">Slithery</button></p>
-<h4>Flutter 程式</h4>
-<p><button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button></p>
-<!-- 內建放入的 Dart 原始碼 -->
-<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
-<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823235&amp;gh_repo=cp2019&amp;gh_path=downloads/Dart_ex/mass_spring_damping&amp;theme=dark" width="800"></iframe></p><br />USB << <a href='USB.html'>Previous</a> </div>
+    <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='分組任務.html'>Next</a> >> 分組任務<br /><h1>home</h1><br />First << <a href='First.html'>Previous</a> <a href='分組任務.html'>Next</a> >> 分組任務</div>
         
     <!-- footer -->
       <div class="container">
