--- a/content/index.html
+++ b/content/index.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
+                     <li><a href='First.html'>First</a><li class='has-children'><a href='home.html'>home</a><ul class='dropdown'><li><a href='分組任務.html'>分組任務</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='USB.html'>Next</a> >> USB<br /><h1>First</h1>
+    <div id="tipue_search_content"> <a href='home.html'>Next</a> >> home<br /><h1>First</h1>
 <p><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">關於</span></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/h7PCrruTkko" width="560"></iframe></p>
 <p><a href="https://www.youtube.com/watch?v=h7PCrruTkko" title="期中影片"><span style="vertical-align: inherit;">https://www.youtube.com/watch?v=h7PCrruTkko</span></a></p>
 <p><img alt="" height="197" src="./../images/1.jpg" width="213"/></p>
@@ -166,7 +166,7 @@ gh_owner=mdecourse&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;them
 <p><img alt="" height="187" src="./../images/1.png" width="285"/></p>
 <p><img alt="" height="156" src="./../images/2.PNG" width="283"/></p>
 <p></p>
-<br /> <a href='USB.html'>Next</a> >> USB</div>
+<br /> <a href='home.html'>Next</a> >> home</div>
         
     <!-- footer -->
       <div class="container">
