Fine-tuning for web

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,6 @@
 <h1>First</h1>
-<p><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">關於</span></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/h7PCrruTkko" width="560"></iframe></p>
+<p></p>
+<p><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">關於(about)</span></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/h7PCrruTkko" width="560"></iframe></p>
 <p><a href="https://www.youtube.com/watch?v=h7PCrruTkko" title="期中影片"><span style="vertical-align: inherit;">https://www.youtube.com/watch?v=h7PCrruTkko</span></a></p>
 <p><img alt="" height="197" src="/images/1.jpg" width="213"/></p>
 <p></p>
