--- a/content/index.html
+++ b/content/index.html
@@ -67,7 +67,7 @@
 <link type="text/css" rel="stylesheet" href="./../cmsimde/static/syntaxhighlighter/css/shCoreDefault.css"/>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 
-<!-- for LaTeX equations 暫時不用
+<!-- 啟用 LaTeX equations 編輯 -->
 <script src="https://scrum-3.github.io/web/math/MathJax.js?config=TeX-MML-AM_CHTML" type="text/javascript"></script>
 <script type="text/javascript">
 init_mathjax = function() {
@@ -88,7 +88,7 @@ init_mathjax = function() {
 }
 init_mathjax();
 </script>
--->
+
 <!-- 暫時不用
 <script src="./../cmsimde/static/fengari-web.js"></script>
 <script type="text/javascript" src="./../cmsimde/static/Cango-13v08-min.js"></script>
@@ -99,6 +99,11 @@ init_mathjax();
 <script src="https://scrum-3.github.io/web/brython/brython.js"></script>
 <script src="https://scrum-3.github.io/web/brython/brython_stdlib.js"></script>
 -->
+<style>
+img.add_border {
+    border: 3px solid blue;
+}
+</style>
 
 </head>
 <body>
@@ -150,7 +155,8 @@ init_mathjax();
           
         </header>
     <div id="tipue_search_content"> <a href='home.html'>Next</a> >> home<br /><h1>First</h1>
-<p><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">關於</span></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/h7PCrruTkko" width="560"></iframe></p>
+<p></p>
+<p><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">關於(about)</span></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/h7PCrruTkko" width="560"></iframe></p>
 <p><a href="https://www.youtube.com/watch?v=h7PCrruTkko" title="期中影片"><span style="vertical-align: inherit;">https://www.youtube.com/watch?v=h7PCrruTkko</span></a></p>
 <p><img alt="" height="197" src="./../images/1.jpg" width="213"/></p>
 <p></p>
