--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,6 @@
 <h1>First</h1>
-<p><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">關於</span></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/h7PCrruTkko" width="560"></iframe></p>
+<p></p>
+<p><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">關於(about)</span></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/h7PCrruTkko" width="560"></iframe></p>
 <p><a href="https://www.youtube.com/watch?v=h7PCrruTkko" title="期中影片"><span style="vertical-align: inherit;">https://www.youtube.com/watch?v=h7PCrruTkko</span></a></p>
 <p><img alt="" height="197" src="/images/1.jpg" width="213"/></p>
 <p></p>
@@ -57,4 +58,41 @@ document.getElementById("iframe").height = 600 ;
 <p></p>
 <h1>影片區</h1>
 <p><a href="https://www.youtube.com/watch?v=ji7J_W3YToo">https://www.youtube.com/watch?v=ji7J_W3YToo</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ji7J_W3YToo" width="560"></iframe></p>
+<p><br/><br/><br/><br/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ji7J_W3YToo" width="560"></iframe></p>
+<p></p>
+<h1>W17考試</h1>
+<p>純DART程式</p>
+<p></p>
+<script>
+function getDart(dirname){
+    source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/Dart_ex/" + dirname + "&theme=dark";
+    document.getElementById("iframe").src = source ;
+}
+
+function getHtmlDart(dirname){
+    source = "https://dartpad.github.io/embed-html.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/Dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function getFlutter(dirname){
+    source = "https://dartpad.github.io/embed-flutter.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/Dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function largest(){
+document.getElementById("iframe").width = document.body.clientWidth ;
+document.getElementById("iframe").height = document.body.clientWidth*0.5 ;
+}
+
+function original(){
+document.getElementById("iframe").width = 800 ;
+document.getElementById("iframe").height = 600 ;
+}
+</script>
+<h4>純 Dart 程式</h4>
+<p><button onclick="getDart('weight-dart')">重量轉換</button></p>
+<h4>Html 程式</h4>
+<p><button onclick="getHtmlDart('weight')">重量轉換</button></p>
+<p><!-- 內建放入的 Dart 原始碼 --></p>
+<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
+<p><br/><iframe height="600" id="iframe" src="https://dartpad.github.io/embed-dart.html?gh_owner=40823235&amp;gh_repo=cp2019&amp;gh_path=downloads/Dart_ex/weight-dart&amp;theme=dark" width="800"></iframe>.</p>
