--- a/content/分組任務.html
+++ b/content/分組任務.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li class='has-children'><a href='home.html'>home</a><ul class='dropdown'><li><a href='分組任務.html'>分組任務</a></li></ul><li><a href='影片區.html'>影片區</a></li>
+                     <li><a href='First.html'>First</a><li class='has-children'><a href='home.html'>home</a><ul class='dropdown'><li><a href='分組任務.html'>分組任務</a></li></ul><li><a href='影片區.html'>影片區</a><li><a href='W17考試.html'>W17考試</a></li>
                       </ul>
                 </nav>
               </div>
