--- a/content/影片區.html
+++ b/content/影片區.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li class='has-children'><a href='home.html'>home</a><ul class='dropdown'><li><a href='分組任務.html'>分組任務</a></li></ul><li><a href='影片區.html'>影片區</a></li>
+                     <li><a href='First.html'>First</a><li class='has-children'><a href='home.html'>home</a><ul class='dropdown'><li><a href='分組任務.html'>分組任務</a></li></ul><li><a href='影片區.html'>影片區</a><li><a href='W17考試.html'>W17考試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,9 +154,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">分組任務 << <a href='分組任務.html'>Previous</a> <br /><h1>影片區</h1>
+    <div id="tipue_search_content">分組任務 << <a href='分組任務.html'>Previous</a> <a href='W17考試.html'>Next</a> >> W17考試<br /><h1>影片區</h1>
 <p><a href="https://www.youtube.com/watch?v=ji7J_W3YToo">https://www.youtube.com/watch?v=ji7J_W3YToo</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ji7J_W3YToo" width="560"></iframe></p><br />分組任務 << <a href='分組任務.html'>Previous</a> </div>
+<p><br/><br/><br/><br/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ji7J_W3YToo" width="560"></iframe></p>
+<p></p>
+<br />分組任務 << <a href='分組任務.html'>Previous</a> <a href='W17考試.html'>Next</a> >> W17考試</div>
         
     <!-- footer -->
       <div class="container">
