--- a/reveal/index.html
+++ b/reveal/index.html
@@ -44,7 +44,7 @@ CMSimfly 網際內容管理
 ### 邱璽
 
 <small>
-Created by [KMOLab](https://40823235.github.io/cp2019/content/index.html)
+Created by [40823235](https://40823235.github.io/cp2019/content/index.html)
 
 
 
@@ -75,7 +75,7 @@ Created by [KMOLab](https://40823235.github.io/cp2019/content/index.html)
 # 溫度轉換1
 
 
-<iframe src="https://dartpad.github.io/embed-html.html?gh_owner=40823251&gh_repo=cp2019&gh_path=downloads/dart_ex/temp1&theme=dark" width="800" height="550"></iframe>
+<iframe src="https://dartpad.github.io/embed-html.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/dart_ex/temp1&theme=dark" width="800" height="550"></iframe>
     </script>
 </section>
     </script>
@@ -89,7 +89,7 @@ Created by [KMOLab](https://40823235.github.io/cp2019/content/index.html)
 <!-- 請注意, @others 不可以內縮 -->
 # 溫度轉換2
 
-<iframe src="https://dartpad.github.io/embed-html.html?gh_owner=40823251&gh_repo=cp2019&gh_path=downloads/dart_ex/temp2&theme=dark" width="800" height="550"></iframe>
+<iframe src="https://dartpad.github.io/embed-html.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/dart_ex/temp2&theme=dark" width="800" height="550"></iframe>
     </script>
 </section>
     </script>
@@ -102,7 +102,7 @@ Created by [KMOLab](https://40823235.github.io/cp2019/content/index.html)
     <script type="text/template">
 ## 國旗
 
-<iframe src="https://dartpad.github.io/embed-html.html?gh_owner=40823251&gh_repo=cp2019&gh_path=downloads/dart_ex/roc_flag&theme=dark" width="800" height="550"></iframe>
+<iframe src="https://dartpad.github.io/embed-html.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/dart_ex/roc_flag&theme=dark" width="800" height="550"></iframe>
     </script>
 </section>
     </script>
