--- a/reveal/index.html
+++ b/reveal/index.html
@@ -114,7 +114,7 @@ Created by [40823235](https://40823235.github.io/cp2019/content/index.html)
     <script type="text/template">
 ## 心得
 
-### 第17w的重點主要是用DART程式畫國旗，雖然我還不太會畫國旗，不過我會多問同學讓自己更熟悉。
+### 這門課我學到了dart的語法，如何拍影片，我自己做的沒有很多東西，基本的操作都有做到，不會的部分我會多問同學讓自己更熟悉。
     </script>
 </section>
 </section>
